added table head and links

--- a/Hello.html
+++ b/Hello.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Hello</title>
+        <title>3 Little Lemons</title>
     </head>
-    <body>Hello, World!
+    <body>
+        <table>
+            <thead>
+                
+                <th>Home</th>
+                <th><a href="">Zoié</a></th>
+                <th><a href="">Kloé</a></th>
+                <th><a href="">Jordynn</a></th>
+            </thead>
+        </table>
+
+        <p>Welcome to the world of 3 Little Lemons!</p>
+        
+        <ul>
+            <li><a href="https://preppykitchen.com/lemon-merengue-tarts/">Lemon Tart</a></li>
+            <li><a href="https://www.allrecipes.com/recipe/32385/best-lemonade-ever/">Lemonade</a></li>
+            <li><a href="https://www.inspiredtaste.net/3970/lemon-drop-martini/">Lemon drop martini</a></li>
+        </ul>
+
+        <p>Enjoy your culinary adventures with lemons!</p>
 
     </body>
 
