added images to names

--- a/Hello.html
+++ b/Hello.html
@@ -7,10 +7,10 @@
         <table>
             <thead>
                 
-                <th>Home</th>
-                <th><a href="">Zoié</a></th>
-                <th><a href="">Kloé</a></th>
-                <th><a href="">Jordynn</a></th>
+                <th><a href="Hello.html">Home</a></th>
+                <th><a href="/Users/josephwalker/Desktop/Zoiewalker.jpg">Zoié</a></th>
+                <th><a href="/Users/josephwalker/Desktop/Kloe.jpg">Kloé</a></th>
+                <th><a href="/Users/josephwalker/Desktop/jordynn.jpg">Jordynn</a></th>
             </thead>
         </table>
 
