added style.css and updated hello.html content

--- a/Hello.html
+++ b/Hello.html
@@ -2,6 +2,8 @@
 <html lang="en">
     <head>
         <title>3 Little Lemons</title>
+        <link rel="stylesheet" href="styles.css">
+        <meta charset="UTF-8">
     </head>
     <body>
         <table>
@@ -17,9 +19,9 @@
         <h1>Welcome to the world of 3 Little Lemons!</h1>
         
         <ul>
-            <li><a href="https://preppykitchen.com/lemon-merengue-tarts/">Lemon Tart</a></li>
+            <li><a href="https://tastesbetterfromscratch.com/strawberry-lemonade/">Strawberry Lemonade</a></li>
             <li><a href="https://www.allrecipes.com/recipe/32385/best-lemonade-ever/">Lemonade</a></li>
-            <li><a href="https://www.inspiredtaste.net/3970/lemon-drop-martini/">Lemon drop martini</a></li>
+            <li><a href="https://www.onceuponachef.com/recipes/raspberry-lemonade.html">Raspberry Lemonade</a></li>
         </ul>
 
         <p>Enjoy your culinary adventures with lemons!</p>
@@ -31,9 +33,9 @@
                 <input type="submit" value="Submit">
             </div>
             <div>
-                <input type="radio" name="lemonType" value="Lemon Tart"> Lemon Tart
+                <input type="radio" name="lemonType" value="Strawberry Lemonade"> Strawberry Lemonade
                 <input type="radio" name="lemonType" value="Lemonade"> Lemonade
-                <input type="radio" name="lemonType" value="Lemon Drop Martini"> Lemon Drop Martini
+                <input type="radio" name="lemonType" value="Raspberry Lemonade"> Raspberry Lemonade
             </div>
             <div>
                 <input name="drink size" list="drinkSizes" placeholder="Select a drink size">
