added color to text and updated infomation

--- a/Hello.html
+++ b/Hello.html
@@ -9,7 +9,7 @@
         <table>
             <thead>
                 
-                <th><a href="Hello.html">Home</a></th>
+                <th><a href="images.html">3Little Lemons</a></th>
                 <th><a href="/Users/josephwalker/Desktop/Zoiewalker.jpg">Zoié</a></th>
                 <th><a href="/Users/josephwalker/Desktop/Kloe.jpg">Kloé</a></th>
                 <th><a href="/Users/josephwalker/Desktop/jordynn.jpg">Jordynn</a></th>
