--- a/images.html
+++ b/images.html
@@ -2,14 +2,44 @@
 <html lang="en">
     <head>
         <title>3 Little Lemons - Images</title>
+        <link rel="stylesheet" href="styles.css">
+        <meta charset="UTF-8">
     </head>
     <body>
-        <img scr="/Users/josephwalker/Desktop/Kloe.jpg" alt="Kloé" width="500" height="333">
-        <img src="/Users/josephwalker/Desktop/jordynn.jpg" alt="Jordynn" width="500" height="333">
-        <img src="/Users/josephwalker/Desktop/Zoiewalker.jpg" alt="Zoié" width="500" height="333">
+        <table>
+            <thead>
+                
+                <th><a href="Hello.html">Home</a></th>
+                <th><a href="/Users/josephwalker/Desktop/Zoiewalker.jpg">Zoié</a></th>
+                <th><a href="/Users/josephwalker/Desktop/Kloe.jpg">Kloé</a></th>
+                <th><a href="/Users/josephwalker/Desktop/jordynn.jpg">Jordynn</a></th>
+            </thead>
+        </table>
+        <h1 id="meet3">Meet the 3 Little Lemons</h1>
+        <p>In A sun-drenched neighborhood of Antioch TN, three young entrepreneurs were hard at work. There was eight-year-old Zoié, the visionary and chief strategist, always sketching new marketing ideas on napkins. Her seven-year-old sister, Kloé, was the meticulous accountant, carefully tallying every nickel and dime in their sparkly pink ledger. And then there was six-year-old Jordynn, the bubbly sales expert, whose infectious giggle could charm even the most reluctant customer into buying an extra cup.</p>
+        <p> Their business, "3 Little Lemons," wasn't just a summer pastime; it was a serious venture with a clear, sparkling goal: Disneyland! For two glorious years, ever since Zoie first declared, "Let's be our own bosses!" after watching Mom and Dad, who are entrepreneurs, they decided to pour their hearts (and plenty of lemons and sugar) into their stand.</p>
+        <p>The girls adored the idea of being their own boss. There were no bedtimes dictated by grown-ups when they were discussing new flavor concoctions, no limits on how many sprinkles they could add to their "premium" cups, and every decision, from pricing to pitcher-polishing, was theirs alone. They learned about supply and demand, customer service, and the sweet taste of earned success, all while dreaming of Mickey Mouse ears and thrilling roller coasters. Their little lemonade stand wasn't just selling drinks; it was brewing big dreams, one refreshing cup at a time.</p>
+        <div>
+            <img src="/Users/josephwalker/Desktop/Kloe.jpg" alt="Kloé" width="500" height="333">
+            <img src="/Users/josephwalker/Desktop/jordynn.jpg" alt="Jordynn" width="500" height="333">
+            <img src="/Users/josephwalker/Desktop/Zoiewalker.jpg" alt="Zoié" width="500" height="333">
+        </div>
+        <div>
+            <h2>Zoié Walker</h2>
+            <p>Zoié is incredibly bright and loves to soak up new knowledge, making friends effortlessly wherever she goes. When she isn't brainstorming lemonade strategies, she enjoyed playing soccer, basketball, and gymnastics. She also has a passion for writing code and exploring the virtual worlds of Roblox.</p>
+        </div>
+        <div>
+            <h2>Kloé Walker</h2>
+            <p>Kloé, with her boundless energy and infectious smile, is a true enthusiast of movement and play, dedicating herself to dance, soccer, basketball, cheer, and gymnastics with a joyful spirit.Beyond her athletic pursuits, Kloé possesses a remarkably kind and compassionate heart. It's no surprise that she's consistently the teacher's favorite; her caring nature shines through in every interaction, always ready to lend a helping hand to classmates and friends. This innate helpfulness makes her a beloved presence in any group.</p>
+        </div>
+        <div>
+            <h2>Jordynn Walker</h2>
+            <p>Jordynn is truly fearless, approaching life with an adventurous spirit. Her heart is especially drawn to animals, and she finds immense joy in their company. Beyond her love for creatures great and small, Jordynn is passionate about gymnastics and soccer, embracing the challenge and excitement of both sports. When she's not on the field or in the gym, she cherishes time playing with her beloved baby doll. Jordynn also loves swimming and has a keen interest in learning Brazilian Jiu-Jitsu (BJJ), eager to master its techniques and embrace new challenges.</p>
+        </div>
+
     
 
         <footer>
-            <p>&copy; 2023 3 Little Lemons</p>
+            <p>&copy; 2025 3 Little Lemons</p>
         </footer>
     </body>
